--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.3.0"
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
+    "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.0.24"
   }
 }
